# pipe-to-bash

./: Cargo.toml  LICENSE  README.md
src/: main.rs
